Updated Authentication
User now logs in to the UI in order to do actions. Admins now can do CRUD operations and user can only get.
Updated build database as only admins can upload trails
